@@ -1,3 +1,7 @@
+2008-02-29  Roger Leigh  <rleigh@debian.org>
+
+	* lib/WannaBuild/Conf.pm: Define $HOME.
+
 2008-01-26  Roger Leigh  <rleigh@debian.org>
 
 	* bin/Makefile.am (bin_SCRIPTS): Add wanna-build programs.
